alignment fixes

--- a/src/dashboard/add-problem/AddProblem.module.css
+++ b/src/dashboard/add-problem/AddProblem.module.css
@@ -4,6 +4,7 @@
   padding: 0 25px;
   align-items: center;
   color: #1a1a1a;
+  width: 1144px;
 }
 
 .Button {
@@ -16,4 +17,9 @@
   flex-direction: row;
   align-items: center;
   justify-content: center;
+}
+
+.Button:hover {
+  background: #0f6ca8;
+  cursor: pointer;
 }
