--- a/src/navbar/Navbar.module.css
+++ b/src/navbar/Navbar.module.css
@@ -27,5 +27,6 @@
   margin-left: 25px;
 }
 .Login {
+  margin-right: 25px;
   margin-left: 10px;
 }
